[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcap-viz"
version = "0.1.0"
description = "Local SIP signaling ladder-diagram viewer for debugging AI voice calls."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Roberto Hernandez" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "typer>=0.13",
    "dpkt>=1.9.8",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "scapy>=2.6",
]

[project.scripts]
pcap-viz = "pcap_viz.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pcap_viz"]
# Static assets are produced by `cd frontend && npm run build` into
# src/pcap_viz/static/ before wheel build. In dev, run from source tree.
artifacts = ["src/pcap_viz/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
